--- a/style.css
+++ b/style.css
@@ -31,22 +31,6 @@ td {
     position: relative;
 }
 
-/*.table-button {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.table-button:hover {
-    background-color: #45a049;
-}
-*/
-
 .abjad-calc-button {
     font-size: x-large;
     border: none;
@@ -58,7 +42,7 @@ td {
     cursor: pointer;
 }
 
-#calcBtn {
+#abjadKeys {
     padding: 0px;
 }
 
@@ -71,3 +55,8 @@ h2 {
     margin-top: 0;
 }
 
+/* Highlighting numerical values */
+.highlight {
+    background-color: lightgreen;
+    color: darkgreen;
+}
