--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ body {
 .table-container {
     overflow-x: auto;
     width: 100%;
-    max-width: 800px;
+    max-width: 600px;
     background: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 table {
@@ -59,4 +61,43 @@ h2 {
 .highlight {
     background-color: lightgreen;
     color: darkgreen;
+}
+
+#calculate {
+    overflow-x: auto;
+    width: 100%;
+    max-width: 500px;
+    background: whitesmoke;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+h2 {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.instructions {
+    width: 100%;
+    max-width: 600px;
+    background: lightyellow;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    text-align: center;
+    font-family: monospace;
+
+}
+
+#abjadValue {
+    background-color: lightgrey;
+    border-color: black;
 }
