--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     max-width: 600px;
     background: white;
-    padding: 20px;
+    padding: 50px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-left: auto;
@@ -39,7 +39,7 @@ td {
     background-color: white;
     width: 100%;
     height: 100%;
-    font-size: 20px;
+    font-size: 30px;
     padding: 10px;
     cursor: pointer;
 }
@@ -72,7 +72,7 @@ h2 {
     color: darkred;
 }
 
-#calculate {
+.result-container {
     overflow-x: auto;
     width: 100%;
     max-width: 500px;
@@ -83,6 +83,25 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+#output {
+    font-size: 40px;
+}
+
+textarea::placeholder {
+    font-size: 20px;
+}
+
+input::placeholder {
+    font-size: 15px;
+}
+
+#abjadValue {
+    width: 150;
+    height: 30px;
+    text-align: center;
+    font-size: 20px;
 }
 
 h2 {
